Updates from Overleaf

--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -379,6 +379,15 @@
 	year = {2023},
 }
 
+@book{dryer_wals_2013,
+	address = {Leipzig},
+	title = {{WALS} {Online}},
+	url = {http://wals.info/},
+	publisher = {Max Planck Institute for Evolutionary Anthropology},
+	editor = {Dryer, Matthew S. and Haspelmath, Martin},
+	year = {2013},
+}
+
 @book{comrie_language_1989,
 	title = {Language universals and linguistic typology: {Syntax} and morphology},
 	publisher = {University of Chicago press},
@@ -441,17 +450,6 @@
 	author = {Levshina, Natalia and Namboodiripad, Savithry and Allassonnière-Tang, Marc and Kramer, Mathew and Talamo, Luigi and Verkerk, Annemarie and Wilmoth, Sasha and Rodriguez, Gabriela Garrido and Gupton, Timothy Michael and Kidd, Evan and Liu, Zoey and Naccarato, Chiara and Nordlinger, Rachel and Panova, Anastasia and Stoynova, Natalia},
 	year = {2023},
 	pages = {825--883},
-}
-
-@inproceedings{sproat_database_nodate,
-	address = {Reykjavik, Iceland},
-	title = {A {Database} for {Measuring} {Linguistic} {Information} {Content}},
-	isbn = {978-2-9517408-8-4},
-	language = {english},
-	booktitle = {Proceedings of the {Ninth} {International} {Conference} on {Language} {Resources} and {Evaluation} ({LREC}'14)},
-	publisher = {European Language Resources Association (ELRA)},
-	author = {Sproat, Richard and Cartoni, Bruno and Choe, Hyunjeong and Huynh, David and Ha, Linne and Rajakumar, Ravindran and Wenzel-Grondie, Evelyn},
-	editor = {Chair), Nicoletta Calzolari (Conference and Choukri, Khalid and Declerck, Thierry and Loftsson, Hrafn and Maegaard, Bente and Mariani, Joseph and Moreno, Asuncion and Odijk, Jan and Piperidis, Stelios},
 }
 
 @misc{hammarstrom_glottologglottolog_2024,
@@ -538,8 +536,8 @@
 	title = {Cours de linguistique générale},
 	publisher = {Payot},
 	author = {Saussure, Ferdinand de},
-	editor = {Bally, Charles and Sechehaye, Albert},
 	year = {1916},
+	note = {Edited by Charles Bally and Albert Sechehaye},
 }
 
 @inproceedings{levshina_who_2025,
@@ -650,4 +648,302 @@
 	publisher = {Oxford University Press (UK)},
 	author = {Baerman, Matthew and Brown, Dunstan and Corbett, Greville G},
 	year = {2015},
+}
+
+@article{kolmogorov_three_1965,
+	title = {Three approaches to the quantitative definition ofinformation’},
+	volume = {1},
+	number = {1},
+	journal = {Problems of information transmission},
+	author = {Kolmogorov, Andrei N},
+	year = {1965},
+	pages = {1--7},
+}
+
+@inproceedings{beniamine_paralex_2023,
+	title = {Paralex: a {DeAR} standard for rich lexicons of inflected forms},
+	booktitle = {Presentation at {International} {Symposium} of {Morphology}},
+	author = {Beniamine, Sacha and Anderson, Cormac and Carroll, Mae and Naranjo, Matías Guzmán and Herce, Borja and Pellegrini, Matteo and Round, Erich and Sims-Williams, Helen and Tresoldi, Tiago},
+	year = {2023},
+}
+
+@article{elsner_computational_2024,
+	title = {Computational approaches to morphological typology},
+	volume = {12},
+	journal = {Journal of Language Modelling},
+	author = {Elsner, Micha and Beniamine, Sacha},
+	year = {2024},
+}
+
+@phdthesis{quinn_evolutionary_2025,
+	address = {Canberra},
+	type = {{PhD} {Thesis}},
+	title = {An evolutionary exploration of paradigm syncretism in the world’s languages},
+	url = {https://openresearch-repository.anu.edu.au/bitstreams/9715b405-9673-4482-b809-e96ee358ec1a/download},
+	school = {Australian National University},
+	author = {Quinn, Kyla},
+	year = {2025},
+}
+
+@inproceedings{sproat_database_2014,
+	address = {Reykjavik, Iceland},
+	title = {A {Database} for {Measuring} {Linguistic} {Information} {Content}},
+	url = {https://aclanthology.org/L14-1397/},
+	abstract = {Which languages convey the most information in a given amount of space? This is a question often asked of linguists, especially by engineers who often have some information theoretic measure of information in mind, but rarely define exactly how they would measure that information. The question is, in fact remarkably hard to answer, and many linguists consider it unanswerable. But it is a question that seems as if it ought to have an answer. If one had a database of close translations between a set of typologically diverse languages, with detailed marking of morphosyntactic and morphosemantic features, one could hope to quantify the differences between how these different languages convey information. Since no appropriate database exists we decided to construct one. The purpose of this paper is to present our work on the database, along with some preliminary results. We plan to release the dataset once complete.},
+	booktitle = {Proceedings of the {Ninth} {International} {Conference} on {Language} {Resources} and {Evaluation} ({LREC}'14)},
+	publisher = {European Language Resources Association (ELRA)},
+	author = {Sproat, Richard and Cartoni, Bruno and Choe, HyunJeong and Huynh, David and Ha, Linne and Rajakumar, Ravindran and Wenzel-Grondie, Evelyn},
+	editor = {Calzolari, Nicoletta and Choukri, Khalid and Declerck, Thierry and Loftsson, Hrafn and Maegaard, Bente and Mariani, Joseph and Moreno, Asuncion and Odijk, Jan and Piperidis, Stelios},
+	year = {2014},
+	pages = {967--974},
+}
+
+@phdthesis{kusters_linguistic_2003,
+	address = {Utrecht},
+	title = {Linguistic complexity : the influence of social change on verbal inflection},
+	language = {English},
+	school = {LOT},
+	author = {Kusters, Christiaan Wouter},
+	year = {2003},
+	annote = {411 pages ; 24 cm.},
+}
+
+@article{miestamo_complexity_2006,
+	title = {On the complexity of standard negation},
+	volume = {19},
+	journal = {Finnish Journal of Linguistics},
+	author = {Miestamo, Matti},
+	year = {2006},
+	pages = {345--356},
+}
+
+@article{ackerman_morphological_2013,
+	title = {Morphological organization: {The} low conditional entropy conjecture},
+	volume = {89},
+	number = {3},
+	journal = {Language},
+	author = {Ackerman, Farrell and Malouf, Robert},
+	year = {2013},
+	note = {Publisher: Linguistic Society of America},
+	pages = {429--464},
+}
+
+@book{sapir_introduction_1921,
+	address = {New York, USA},
+	title = {An introduction to the study of speech},
+	publisher = {Harcourt, Brace and company},
+	author = {Sapir, Edward},
+	year = {1921},
+}
+
+@book{bybee_morphology_1985,
+	title = {Morphology: {A} study of the relation between meaning and form},
+	publisher = {John Benjamins},
+	author = {Bybee, Joan L},
+	year = {1985},
+}
+
+@article{beniamine_one_2021,
+	title = {One lexeme, many classes: {Inflection} class systems as lattices},
+	journal = {One-to-many relations in morphology, syntax and semantics},
+	author = {Beniamine, Sacha},
+	year = {2021},
+	note = {Publisher: Language Science Press Berlin},
+	pages = {23--51},
+}
+
+@article{lindsay-smith_analogy_2024,
+	title = {Analogy in inflection},
+	volume = {10},
+	number = {1},
+	journal = {Annual review of linguistics},
+	author = {Lindsay-Smith, Emily and Baerman, Matthew and Beniamine, Sacha and Sims-Williams, Helen and Round, Erich R},
+	year = {2024},
+	note = {Publisher: Annual Reviews},
+	pages = {211--231},
+}
+
+@article{greenberg_synchronic_1966,
+	title = {Synchronic and diachronic universals in phonology},
+	volume = {42},
+	number = {2},
+	journal = {Language},
+	author = {Greenberg, Joseph H},
+	year = {1966},
+	note = {Publisher: JSTOR},
+	pages = {508--517},
+}
+
+@book{greenberg_language_2005,
+	title = {Language universals: {With} special reference to feature hierarchies},
+	volume = {59},
+	publisher = {Walter de Gruyter},
+	author = {Greenberg, Joseph Harold},
+	year = {2005},
+	note = {original-date: 1966},
+}
+
+@incollection{miestamo_grammatical_2008,
+	title = {Grammatical complexity in cross-linguistic perspective},
+	booktitle = {Language {Complexity}},
+	publisher = {John Benjamins Publishing Company},
+	author = {Miestamo, Matti},
+	year = {2008},
+	pages = {23--41},
+}
+
+@inproceedings{miestamo_feasibility_2006,
+	address = {Tallinn},
+	title = {On the feasibility of complexity metrics},
+	booktitle = {Finest {Linguistics}. {Proceedings} of the {Annual} {Finnish} and {Estonian} {Conference} of {Linguistics}, {Tallinn}, {May} 6-7, 2004},
+	publisher = {TLÜ},
+	author = {Miestamo, Matti},
+	editor = {Kerge, K. and Sepper, M.-M.},
+	year = {2006},
+}
+
+@article{bonami_joint_2016,
+	title = {Joint predictiveness in inflectional paradigms},
+	volume = {9},
+	number = {2},
+	journal = {Word structure},
+	author = {Bonami, Olivier and Beniamine, Sacha},
+	year = {2016},
+	note = {Publisher: Edinburgh University Press 22 George Square, Edinburgh EH8 9LF UK},
+	pages = {156--182},
+}
+
+@article{greenberg_quantitative_1960,
+	title = {A quantitative approach to the morphological typology of language},
+	volume = {26},
+	number = {3},
+	journal = {International journal of American linguistics},
+	author = {Greenberg, Joseph H},
+	year = {1960},
+	note = {Publisher: Indiana University},
+	pages = {178--194},
+}
+
+@incollection{greenberg_universals_1963,
+	address = {Cambridge, MA},
+	title = {Some universals of grammar with particular reference to the order of meaningful elements},
+	booktitle = {Universals of language},
+	publisher = {MIT press},
+	author = {Greenberg, Joseph H},
+	editor = {Greenberg, Joseph H},
+	year = {1963},
+}
+
+@misc{skirgard_aggregate_2025,
+	title = {Aggregate metrics derived from {Grambank} data},
+	url = {https://github.com/grambank/grambank/wiki/Aggregate-metrics-derived-from-Grambank-data},
+	author = {Skirgård, Hedvig},
+	year = {2025},
+	annote = {GitHub wiki, accessed 2025-12-22},
+}
+
+@article{holm_simple_1979,
+	title = {A simple sequentially rejective multiple test procedure},
+	journal = {Scandinavian journal of statistics},
+	author = {Holm, Sture},
+	year = {1979},
+	note = {Publisher: JSTOR},
+	pages = {65--70},
+}
+
+@misc{cotterell_are_2020,
+	title = {Are {All} {Languages} {Equally} {Hard} to {Language}-{Model}?},
+	url = {https://arxiv.org/abs/1806.03743},
+	author = {Cotterell, Ryan and Mielke, Sabrina J. and Eisner, Jason and Roark, Brian},
+	year = {2020},
+	note = {\_eprint: 1806.03743},
+}
+
+@article{kilgarriff_comparing_2001,
+	title = {Comparing corpora},
+	volume = {6},
+	number = {1},
+	journal = {International journal of corpus linguistics},
+	author = {Kilgarriff, Adam},
+	year = {2001},
+	note = {Publisher: John Benjamins},
+	pages = {97--133},
+}
+
+@book{li_mandarin_1981,
+	address = {Berkeley and Los Angeles and London},
+	edition = {[Nachdr.]},
+	series = {none},
+	title = {Mandarin {Chinese}: a functional reference grammar: {A} functional reference grammar},
+	isbn = {978-0-520-04286-5 0-520-04286-7},
+	number = {none},
+	publisher = {Berkeley, Calif.: University of California Press},
+	author = {Li, Charles N. and Thompson, Sandra A.},
+	year = {1981},
+	keywords = {Chinese language Grammar},
+}
+
+@article{bentz_word_2016,
+	title = {The word entropy of natural languages},
+	journal = {arXiv preprint arXiv:1606.06996},
+	author = {Bentz, Christian and Alikaniotis, Dimitrios},
+	year = {2016},
+}
+
+@inproceedings{bentz_learning_2016,
+	title = {Learning pressures reduce morphological complexity:: {Linking} corpus, computational and experimental evidence},
+	booktitle = {26th {International} {Conference} on {Computational} {Linguistics} ({COLING} 2016), 11th to 16th {December} 2016 {Osaka}, {Japan}.},
+	author = {Bentz, Christian and Berdicevskis, Aleksandrs},
+	year = {2016},
+	pages = {222--232},
+}
+
+@article{cohen-mimran_effect_2013,
+	title = {The {Effect} of {Morphological} {Complexity} on {Verbal} {Working} {Memory}: {Results} from {Arabic} {Speaking} {Children}},
+	volume = {42},
+	issn = {1573-6555},
+	url = {https://doi.org/10.1007/s10936-012-9200-z},
+	doi = {10.1007/s10936-012-9200-z},
+	abstract = {To examine the role of morphology in verbal working memory. Forty nine children, all native speakers of Arabic from the same region and of the same dialect, performed a Listening Word Span Task, whereby they had to recall Arabic uninflected words (i.e., base words), inflected words with regular (possessive) morphology, or inflected words with irregular (broken plural) morphology. Each of these words was at the end of a sentence (henceforth, target word). The participant’s task was to listen to a series of sentences and then recall the target words. Recall of inflected words was significantly poorer than uninflected words, and recall of words with regular morphology was significantly poorer than recall of words with irregular morphology. These findings, albeit preliminary, suggest a role of morphology in verbal working memory. They also suggest that, at least in Arabic, regular morphological forms are decomposed into their component elements and hence impose an extra load on the central executive and episodic buffer components of working memory. Furthermore, in concert with findings from other studies, they suggest that the effect of morphology on working memory is probably language-specific. The clinical implications of the present findings are addressed.},
+	number = {3},
+	journal = {Journal of Psycholinguistic Research},
+	author = {Cohen-Mimran, Ravit and Adwan-Mansour, Jasmeen and Sapir, Shimon},
+	month = jun,
+	year = {2013},
+	pages = {239--253},
+}
+
+@article{mehravari_effects_2015,
+	title = {Effects of {Grammaticality} and {Morphological} {Complexity} on the {P600} {Event}-{Related} {Potential} {Component}.},
+	volume = {10},
+	issn = {1932-6203},
+	doi = {10.1371/journal.pone.0140850},
+	abstract = {We investigated interactions between morphological complexity and grammaticality on electrophysiological markers of grammatical processing during reading. Our  goal was to determine whether morphological complexity and stimulus  grammaticality have independent or additive effects on the P600 event-related  potential component. Participants read sentences that were either well-formed or  grammatically ill-formed, in which the critical word was either morphologically  simple or complex. Results revealed no effects of complexity for well-formed  stimuli, but the P600 amplitude was significantly larger for morphologically  complex ungrammatical stimuli than for morphologically simple ungrammatical  stimuli. These findings suggest that some previous work may have inadequately  characterized factors related to reanalysis during morphosyntactic processing.  Our results show that morphological complexity by itself does not elicit P600  effects. However, in ungrammatical circumstances, overt morphology provides a  more robust and reliable cue to morphosyntactic relationships than null  affixation.},
+	language = {eng},
+	number = {10},
+	journal = {PloS one},
+	author = {Mehravari, Alison S. and Tanner, Darren and Wampler, Emma K. and Valentine, Geoffrey D. and Osterhout, Lee},
+	year = {2015},
+	pmid = {26488893},
+	pmcid = {PMC4619296},
+	note = {Place: United States},
+	keywords = {*Language, *Reading, Adolescent, Adult, Brain Mapping, Brain Waves/*physiology, Comprehension/physiology, Electroencephalography, Evoked Potentials/*physiology, Female, Humans, Male, Students, Young Adult},
+	pages = {e0140850},
+}
+
+@incollection{findlay_effects_1995,
+	series = {Studies in {Visual} {Information} {Processing}},
+	title = {Effects {Of} {A} {Word}’s {Morphological} {Complexity} {On} {Readers}’ {Eye} {Fixation} {Patterns}},
+	volume = {6},
+	url = {https://www.sciencedirect.com/science/article/pii/S0926907X05800376},
+	abstract = {In the present study morphological processing during word recognition was examined by employing the lexical decision and naming tasks in combination with eye movement registration. Three types of nouns with different morphological complexity were used: monomorphemic base-form nouns, and two types of multimorphemic nouns - derived and inflected. Subjects were asked to look at each word as long as they needed to be able to name it aloud (Expt. 1) or make a lexical decision (Expt. 2) to it. The results showed that inflected words attracted longer first and second fixations than derived or base-form words. On the other hand, the fixation frequency was lower for the inflected words than for the other wordtypes. The morphological effect was not found to interact with the experimental task. The study lends support to the view that some morphological parsing takes place during lexical access. Moreover, the results are in accordance with the SAID (Stem Allomorph/Inflectional Decomposition) model proposed by Laine, Niemi, Koivuselkä-Sallinen, Ahlsen and Hyona (in press), according to which a speaker of Finnish represents and accesses inflected words in a morphologically decomposed form, while derived words are accessed as single entities.},
+	booktitle = {Eye {Movement} {Research}},
+	publisher = {North-Holland},
+	author = {Hyönä, Jukka and Laine, Matti and Niemi, Jussi},
+	editor = {Findlay, John M. and Walker, Robin and Kentridge, Robert W.},
+	year = {1995},
+	doi = {https://doi.org/10.1016/S0926-907X(05)80037-6},
+	note = {ISSN: 0926-907X},
+	keywords = {Finnish, fixation duration, fixation frequency, lexical decision, morphological processing, naming, word recognition},
+	pages = {445--452},
 }
