Updates from Overleaf

--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -97,6 +97,7 @@
 @inproceedings{bentz2016comparison,
 	title = {A comparison between morphological complexity measures: typological data vs. language corpora},
 	booktitle = {Proceedings of the workshop on computational linguistics for linguistic complexity ({CL4LC})},
+    address={Osaka, Japan},
 	author = {Bentz, Christian and Ruzsics, Tatyana and Koplenig, Alexander and Samardzic, Tanja},
 	year = {2016},
 	pages = {142--153},
@@ -165,6 +166,17 @@
 	annote = {LINDAT/CLARIAH-CZ digital library at the Institute of Formal and Applied Linguistics (ÚFAL), Faculty of Mathematics and Physics, Charles University},
 }
 
+@article{dale2012understanding,
+  title={Understanding the origins of morphological diversity: The linguistic niche hypothesis},
+  author={Dale, Rick and Lupyan, Gary},
+  journal={Advances in complex systems},
+  volume={15},
+  number={03n04},
+  pages={1150017},
+  year={2012},
+  publisher={World Scientific}
+}
+
 @inproceedings{lupyan2024cautionary,
 	title = {A cautionary note on sociodemographic predictors of linguistic complexity: {Different} measures and different analyses lead to different conclusions},
 	booktitle = {15th international conference on the evolution of language ({EVOLANG})},
@@ -172,6 +184,16 @@
 	author = {Lupyan, Gary and Raviv, Limor},
 	year = {2024},
 	pages = {345--348},
+}
+
+@article{sampson2009linguistic,
+  title={A linguistic axiom challenged},
+  author={Sampson, Geoffrey},
+  journal={Language complexity as an evolving variable},
+  volume={2},
+  pages={18},
+  year={2009},
+  publisher={Oxford University Press Oxford}
 }
 
 @article{cotterell2019complexity,
@@ -345,7 +367,7 @@
 	title = {Cognition and the stability of evolving complex morphology: an agent-based model},
 	booktitle = {The {Evolution} of {Language}: {Proceedings} of the {Joint} {Conference} on {Language} {Evolution} ({JCoLE})},
 	publisher = {Joint Conference on Language Evolution (JCoLE)},
-	author = {Round, Erich and Mann, Stephen and Beniamine, Sacha and Lindsay-Smith, Emily and Esher, Louise and Spike, Matt},
+	author = {Round, Erich and Mann, Stephen Francis and Beniamine, Sacha and Lindsay-Smith, Emily and Esher, Louise and Spike, Matt},
 	year = {2022},
 	pages = {635--642},
 }
@@ -715,6 +737,17 @@
 	author = {Miestamo, Matti},
 	year = {2006},
 	pages = {345--356},
+}
+
+@article{raviv2022simple,
+  title={What is simple is actually quite complex: A critical note on terminology in the domain of language and communication.},
+  author={Raviv, Limor and Peckre, Louise R and Boeckx, Cedric},
+  journal={Journal of Comparative Psychology},
+  volume={136},
+  number={4},
+  pages={215},
+  year={2022},
+  publisher={American Psychological Association}
 }
 
 @article{ackerman_morphological_2013,
